--- a/class 09/style.css
+++ b/class 09/style.css
@@ -1,5 +1,12 @@
 body{
-    background-color: black;
+    background-color: #c0c0c0;
+    padding: 20px;
+    color: #ffffff;
+    font-family: Arial, verdana, sans-serif;
+}
+p{
+    padding: 5px;
+    margin: 0%;
 }
 h1{
     background-color: #aca9a9;
